Update codebase: backend, frontend, and voice-ai-agent components